some changes in html, css and js

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -39,7 +39,7 @@
                             <div class="col-3">
                                 <div class="card">
                                     <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
-                                        <img src="images/profile.png" alt="Profile" class="rounded-circle" style="
+                                        <img src="https://source.unsplash.com/random/200x200?sig=1" alt="Profile" class="rounded-circle" style="
                                                     height: 100px;
                                                     width: 100px;
                                                 " />
@@ -236,11 +236,6 @@
     <div class="modal fade" id="add-department-modal" data-bs-backdrop="static" data-bs-keyboard="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
-                    <img src="images/tph.png" style="width: 70px; height: 45px" />
-
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
                 <div class="modal-body">
                     <!-- TODO :: REDESIGN FORM FOR ADDING DEPARTMENT -->
                     <form>
