--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -650,11 +650,6 @@
     transition-property: border-radius;
 }
 
-.active-card:active > .card {
-    border: 2px solid rgb(0, 0, 0);
-    background-color: rgba(240, 240, 240, 0.8);
-}
-
 .bi-trash3-fill {
     cursor: pointer;
 }
@@ -730,7 +725,7 @@
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
 	transform: rotate(0deg);
-	transition: transform 250ms;
+	transition: transform 100ms;
 	transform-origin: 19% 100%;
 }
 .trash span:after {
@@ -744,16 +739,43 @@
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
 	transform: rotate(0deg);
-	transition: transform 250ms;
+	transition: transform 100ms;
 	transform-origin: 19% 100%;
 }
 
 .trash:hover span {
 	top: -10px;
-	transition: all 250ms;
+	transition: all 100ms;
 }
 
 .drag-over.trash span {
     top: -10px;
-    transition: all 250ms;
+    transition: all 100ms;
+}
+
+/* Breadcrumbs */
+.breadcrumb {
+  font-size: 14px;
+  font-family: "Nunito", sans-serif;
+  color: #899bbd;
+  font-weight: 600;
+}
+
+.breadcrumb a {
+  color: #899bbd;
+  transition: 0.3s;
+  text-decoration: none;
+}
+
+.breadcrumb a:hover {
+  color: #51678f;
+}
+
+.breadcrumb .breadcrumb-item::before {
+  color: #899bbd;
+}
+
+.breadcrumb .active {
+  color: #51678f;
+  font-weight: 600;
 }
