--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -121,11 +121,10 @@
                         <nav>
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item">
-                                    <a href="dashboard.html" style="text-decoration: none">Home</a>
+                                    <a href="/dashboard">Home</a>
                                 </li>
-                                <li class="breadcrumb-item">Users</li>
-                                <li class="breadcrumb-item">
-                                    <a href="profile.html" style="text-decoration: none">Profile</a>
+                                <li class="breadcrumb-item active">
+                                    Profile
                                 </li>
                             </ol>
                         </nav>
@@ -137,7 +136,7 @@
                     <div class="col-3">
                         <div class="card">
                             <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
-                                <img src="images/profile.png" alt="Profile" class="rounded-circle"
+                                <img src="https://source.unsplash.com/random/200x200?sig=1" alt="Profile" class="rounded-circle"
                                     style="height: 100px; width: 100px" />
                                 <h4 style="margin-top: 10px">
                                     Kevin Anderson
