quill -> /lib/, make responssive for both profile.html and department-details modal and added the project details modal

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -22,6 +22,8 @@
   <!-- Libraries Stylesheet -->
   <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
   <link href="/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="/lib/quill/quill.bubble.css" />
+  <link rel="stylesheet" href="/lib/quill/quill.snow.css" />
 
   <!-- Customized Bootstrap Stylesheet -->
   <link href="/css/bootstrap.min.css" rel="stylesheet" />
