add view controller for reset password

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -130,8 +130,8 @@
                                                     </li>
                                                 </ul>
                                                 <div class="col">
-                                                    <canvas style="padding: 0;"
-                                                     style="max-width: 960px;"
+                                                    <canvas 
+                                                    style="max-width: 960px; padding: 0;"
                                                     id="department-projects-chart" height="200"
                                                 ></canvas>
                                                 </div>
@@ -721,7 +721,7 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <a href="project.html" class="btn btn-primary"
+                            <a href="/project" class="btn btn-primary"
                                 >manage task</a
                             >
                         </div>
