fixed error in custome, department

--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -250,9 +250,85 @@
                                     </div>
 
                                     <h5
-                                        class="mb-1 card-title department-detail-titile"
+                                        class="mb-1 card-title modal-detail-title"
                                     >
                                         Development
+                                    </h5>
+                                    <p class="mb-3">
+                                        Preparing framework of block-based
+                                        WordPress Theme.
+                                    </p>
+                                    <div
+                                        class="d-flex align-items-center justify-content-between pt-3 border-top"
+                                    >
+                                        <div class="iq-media-group">
+                                            <a href="#" class="iq-media">
+                                                <img
+                                                    class="img-fluid avatar-40 rounded-circle"
+                                                    src="https://source.unsplash.com/random/200x200?sig=1"
+                                                    alt=""
+                                                    style="
+                                                        height: 40px;
+                                                        width: 40px;
+                                                    "
+                                                />
+                                            </a>
+                                            <a href="#" class="iq-media">
+                                                <img
+                                                    class="img-fluid avatar-40 rounded-circle"
+                                                    src="https://source.unsplash.com/random/200x200?sig=1"
+                                                    alt=""
+                                                    style="
+                                                        height: 40px;
+                                                        width: 40px;
+                                                    "
+                                                />
+                                            </a>
+                                            <a href="#" class="iq-media">
+                                                <img
+                                                    class="img-fluid avatar-40 rounded-circle"
+                                                    src="https://source.unsplash.com/random/200x200?sig=1"
+                                                    alt=""
+                                                    style="
+                                                        height: 40px;
+                                                        width: 40px;
+                                                    "
+                                                />
+                                            </a>
+                                        </div>
+                                        <a
+                                            href=""
+                                            class="btn btn-white text-secondary link-shadow"
+                                            data-bs-toggle="modal"
+                                            data-bs-target="#department-details"
+                                            >See More</a
+                                        >
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div
+                            class="col-lg-4 col-md-4"
+                            style="padding-bottom: 20px"
+                        >
+                            <div
+                                class="card card-block card-stretch card-height"
+                                style="background-color: rgb(242, 247, 248)"
+                            >
+                                <div class="card-body">
+                                    <div
+                                        class="d-flex align-items-center justify-content-between mb-4"
+                                    >
+                                        <img
+                                            src="https://source.unsplash.com/random/200x200?sig=1"
+                                            style="height: 100px; width: 100px"
+                                        />
+                                    </div>
+
+                                    <h5
+                                        class="mb-1 card-title modal-detail-title"
+                                    >
+                                        Castle
                                     </h5>
                                     <p class="mb-3">
                                         Preparing framework of block-based
