--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -32,7 +32,7 @@
                     background-size: 12px 12px;
                 "
             >
-                <div th:replace="fragments/navigation :: navigation"></div>
+                <div th:replace="fragments/navigation :: navigation-with-search-icon"></div>
                 <!-- Search Start -->
                 <div
                     class="container-fluid d-md-block pt-2 ps-s pe-2"
