--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -77,10 +77,10 @@ vs
                                 </button>
                             </li>
                             <div
-                                class="d-flex justify-content-end trash-can-container"
+                                class="d-flex justify-content-end trash-can-container dummy-trash"
                             >
-                                <span class="trash align-self-end">
-                                    <span></span>
+                                <span class="trash align-self-end dummy-trash">
+                                    <span class="dummy-trash"></span>
                                 </span>
                             </div>
                         </ul>
