--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -130,50 +130,45 @@
             </div>
             <div class="modal-body">
 
-                <form class="row g-3" id="validation-form" action="project.html">
-                    <div class="col-lg-12">
-                        <label for="task" class="col-sm-12 col-form-label" name="task" id="task">Task</label>
+                <form class="row g-3" id="validation-form" action="">
+                    <div class="col-lg-6">
+                        <label for="task" class="col-sm-12 col-form-label " name="task" id="task">Task Name <span style="color:red"> *</span></label>
                         <input type="text" class="form-control border-task" id="task" name="task">
                     </div>
 
-                    <div class="col-12">
-                        <label for="project" class="col-sm-2 col-form-label" name="project" id="project">Project</label>
-                        <input type="text" class="form-control border-task" id="project" name="project">
+                    <div class="col-lg-6">
+                        <label for="pm" class="col-sm-12 col-form-label " name="pm" id="pm">Project Manager <span style="color:red"> *</span></label>
+                        <select class="form-control selectpicker"  aria-label="Select Project Manager" data-live-search="true" id="pm" name="pm" multiple>
+                            <option>Category</option>
+                            <option>Android</option>
+                            <option>IOS</option>
+                            <option>Ui/Ux Design</option>
+                            <option>Development</option>
+                        </select>
                     </div>
 
-                    <div class="col-12">
-                        <label for="pm" class="col-sm-12 col-form-label" name="pm" id="pm">Project Manager</label>
-                        <input type="text" class="form-control border-task" id="pm" name="pm">
+
+                    <div class="col-md-6">
+                        <label for="start_time" class="col-sm-12 col-form-label" name="start_time" id="start_time">Start Date <span style="color:red"> *</span></label>
+                        <input type="date" class="form-control border-task" id="start_time" name="start_time">
                     </div>
+
+                    <div class="col-md-6">
+                        <label for="end_time" class="col-sm-12 col-form-label" name="end_time" id="end_time">End Date <span style="color:red"> *</span></label>
+                        <input type="date" class="form-control border-task" id="end_time" name="end_time">
+                    </div>
+
 
                     <div class="col-12">
                         <label for="description" class="col-sm-12 col-form-label" name="description" id="description">Description</label>
                         <textarea class="form-control border-task-description" id="description" name="description" rows="2"></textarea>
                     </div>
 
-                    <div class="col-md-6">
-                        <label for="start_time" class="col-sm-12 col-form-label" name="start_time" id="start_time">Start Date</label>
-                        <input type="date" class="form-control border-task" id="start_time" name="start_time">
-                    </div>
-
-                    <div class="col-md-6">
-                        <label for="end_time" class="col-sm-12 col-form-label" name="end_time" id="end_time">End Date</label>
-                        <input type="date" class="form-control border-task" id="end_time" name="end_time">
-                    </div>
-
-                    <div class="col-12">
-                        <label for="expected_mm" class="col-sm-12 col-form-label" name="expected_mm" id="expected_mm">Expected</label>
-                        <input type="text" class="form-control border-task" id="expected_mm" name="expected_mm">
-                    </div>
-
-                    <div class="col-12">
-                        <label for="actual" class="col-sm-12 col-form-label" name="actual" id="actual">Actual</label>
-                        <input type="text" class="form-control border-task" id="actual" name="actual">
-                    </div>
 
 
                     <div class="text-center">
                         <button type="submit" class="btn btn-primary col-2" data-dismiss="modal">Add</button>
+                        <button type="reset" class="btn btn-secondary mr-3" data-dismiss="modal">Cancel</button>
                     </div>
                 </form>
 
@@ -219,6 +214,127 @@
         </div>
         <!-- modal for project's details -->
 
+<!--        modal for add Project-->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+     tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content task-content">
+            <div class="modal-header">
+                <h2 class="card-title" style="text-align:center">Add Project</h2>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+
+                <form class="row g-3" id="validation-form" action="">
+                    <div class="col-lg-6">
+                        <label for="name" class="col-sm-12 col-form-label" name="name" id="name">Project Name<span style="color:red"> *</span></label>
+                        <input type="text" class="form-control border-task" id="name" name="name">
+                    </div>
+
+
+                    <div class="col-lg-6">
+                        <label for="department" class="col-sm-12 col-form-label" name="department" id="name">Department Name <span style="color:red"> *</span></label>
+                        <select class="form-control selectpicker"  aria-label="Select Department" data-live-search="true" id="department" name="department" multiple>
+                            <option>Category</option>
+                            <option>Android</option>
+                            <option>IOS</option>
+                            <option>Ui/Ux Design</option>
+                            <option>Development</option>
+                        </select>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <label for="user" class="col-sm-12 col-form-label" name="user" id="user">Project Manager <span style="color:red"> *</span></label>
+                        <input type="text" class="form-control border-task" id="user" name="user">
+                    </div>
+
+                    <div class="col-lg-6">
+                        <label for="user" class="col-sm-12 col-form-label" name="user" id="user">Assign Members <span style="color:red"> *</span></label>
+                        <select class="form-control selectpicker"  aria-label="Select Members" data-live-search="true" id="member" name="member" multiple>
+                            <option>Category</option>
+                            <option>Android</option>
+                            <option>IOS</option>
+                            <option>Ui/Ux Design</option>
+                            <option>Development</option>
+                        </select>
+                    </div>
+
+
+                    <div class="col-lg-6">
+                        <label for="client" class="col-sm-12 col-form-label" name="client" id="client">Client <span style="color:red"> *</span></label>
+                        <select class="form-control selectpicker"  aria-label="Select Clients" data-live-search="true" id="client" name="client" >
+                            <option>Category</option>
+                            <option>Android</option>
+                            <option>IOS</option>
+                            <option>Ui/Ux Design</option>
+                            <option>Development</option>
+                        </select>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <label for="background" class="col-sm-12 col-form-label" name="background" id="background">Background<span style="color:red"> *</span></label>
+                        <input type="text" class="form-control border-task" id="background" name="background">
+                    </div>
+
+                    <div class="col-md-6">
+                        <label for="start_date" class="col-sm-12 col-form-label" name="start_date" id="start_date">Start Date <span style="color:red"> *</span></label>
+                        <input type="date" class="form-control border-task" id="start_date" name="start_date">
+                    </div>
+
+                    <div class="col-6">
+                        <label for="duration" class="col-sm-12 col-form-label" name="duration" id="duration">Duration <span style="color:red"> *</span></label>
+                        <input type="text" class="form-control border-task" id="duration" name="duration">
+                    </div>
+
+
+
+                    <div class="col-lg-6">
+                        <label for="duration" class="col-sm-12 col-form-label" name="objective" id="objective">Objective <span style="color:red"> *</span></label>
+                        <input type="text" class="form-control border-task" id="objective" name="objective">
+                    </div>
+
+
+
+                    <div class="col-lg-6">
+                        <label for="architectures" class="col-sm-12 col-form-label" name="architectures" id="architectures">Architecture <span style="color:red"> *</span></label>
+                        <input type="text" class="form-control border-task" id="architectures" name="architectures">
+                    </div>
+
+                    <div class="col-lg-6">
+                        <label for="systemOutlines" class="col-sm-12 col-form-label" name="systemOutlines" id="systemOutlines">SystemOutline <span style="color:red"> *</span></label>
+                        <select class="form-control selectpicker"  aria-label="Select System Outlines" data-live-search="true" id="systemOutlines" name="systemOutlines" multiple>
+                            <option>Analysis</option>
+                            <option>System Design</option>
+                            <option>Coding</option>
+                            <option>Testing</option>
+                            <option>Deploy</option>
+                            <option>Maintenance</option>
+                            <option>Document</option>
+                        </select>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <label for="deliverable" class="col-sm-12 col-form-label" name="deliverable" id="deliverable">Deliverable  <span style="color:red"> *</span></label>
+                        <input type="text" class="form-control border-task" id="deliverable" name="deliverable">
+                    </div>
+
+
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary col-2" data-dismiss="modal">Add</button>
+                        <button type="reset" class="btn btn-secondary mr-2" data-dismiss="modal">Cancel</button>
+                    </div>
+                </form>
+
+            </div>
+        </div>
+    </div>
+</div>
+<!--        modal for add Project-->
+
+
+
+
+
         <!-- profile modal -->
         <div class="modal fade" id="profile-modal" data-bs-keyboard="false" tabindex="-1"
              aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -234,6 +350,9 @@
 
 
         <div th:replace="fragments/footer :: footer"></div>
+
+<!--select-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
 
 <!-- fontawesome -->
 <script src="/js/fontawesome.js"></script>
