readd project detail modal

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -261,7 +261,7 @@
                                             id="profile-change-password"
                                         >
                                             <!-- Change Password Form -->
-                                            <form>
+                                            <form id="login-form">
                                                 <div class="row mb-3">
                                                     <label
                                                         for="currentPassword"
@@ -276,6 +276,7 @@
                                                             type="password"
                                                             class="form-control"
                                                             id="currentPassword"
+                                                            data-type="password"
                                                         />
                                                     </div>
                                                 </div>
@@ -294,6 +295,7 @@
                                                             type="password"
                                                             class="form-control"
                                                             id="newPassword"
+                                                            data-type="newpassword"
                                                         />
                                                     </div>
                                                 </div>
@@ -313,6 +315,7 @@
                                                             type="password"
                                                             class="form-control"
                                                             id="renewPassword"
+                                                            data-type="confirmpassword"
                                                         />
                                                     </div>
                                                 </div>
