--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -70,11 +70,11 @@
                 <!-- project start -->
                 <div class="container-fluid border mt-sm-2 mt-2">
                     <div
-                        class="row row-cols-sm-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 gap-md-0 g-3 p-sm-2"
+                        class="row row-cols-sm-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-3 gap-md-0 g-3 p-sm-2"
                         id="sort-container"
                     >
                         <!-- TODO :: SHOW ALL PROJECTS LIST START FROM HERE -->
-                        <div class="p-md-3 p-sm-2 active-card">
+                        <div class="p-md-3 p-sm-2 active-card m-0">
                             <div class="card border-success">
                                 <div class="card-header">
                                     <div class="d-flex flex-column">
@@ -126,7 +126,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="p-md-3 p-sm-2 active-card">
+                        <div class="p-md-3 p-sm-2 active-card m-0">
                             <div class="card border-success">
                                 <div class="card-header">
                                     <div class="d-flex flex-column">
