fixed some error

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -269,7 +269,7 @@
 
 
     <!-- add task -->
-    <div class="modal fade" id="add-task" data-bs-keyboard="true">
+    <div class="modal fade" id="todo-form" data-bs-keyboard="true">
         <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content task-content">
                 <div class="modal-header">
