--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -822,5 +822,28 @@
 
 /**Task End**/
 
+.issue-time-line p {
+    padding: 0;
+    margin: 0;
+    opacity: 0.5;
+}
 
+.issue-time-line span {
+    font-size: 0.8em;
+    opacity: 1;
+}
+.code-block pre {
+    padding: 5px 10px;
+    background-color: rgb(35, 36, 31);
+    color: white;
+    border-radius: 5px;
+    font-size: 11.375px;
+    margin: 5px 0;
+    
+}
+
+.code-block p {
+    font-size: small;
+    margin: 0;
+}
 
