--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -135,7 +135,7 @@
                                 >My Profile</a
                             >
                             <!-- <a href="#" class="dropdown-item">Settings</a> -->
-                            <a href="#" class="dropdown-item d-flex gap-1"
+                            <a href="/logout" class="dropdown-item d-flex gap-1"
                                 ><i
                                     class="bi bi-box-arrow-right text-danger"
                                 ></i
