--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -5,10 +5,10 @@
         <title>Navigation</title>
     </head>
     <body>
-        <header class="topbar" th:fragment="navigation">
+
             <!-- Navbar With Search  Start -->
             <nav
-                class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0"
+                class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0" th:fragment="navigation-with-search"
             >
                 <a th:href="@{/}" class="navbar-brand d-flex d-lg-none me-4">
                     <h2 class="text-primary mb-0">
@@ -148,11 +148,11 @@
                 </div>
             </nav>
             <!-- Navbar With Search End -->
-        </header>
-        <aside>
+
+
             <!-- Navbar No Search Start -->
             <nav
-                class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0"
+                class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0" th:fragment="navigation-without-search"
             >
                 <a href="#" class="sidebar-toggler flex-shrink-0">
                     <i class="fa fa-bars"></i>
@@ -282,6 +282,6 @@
                 </div>
             </nav>
             <!-- Navbar No Search End -->
-        </aside>
+
     </body>
 </html>
